--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       <section class="tradition-section" id="tradition-section">
         <h2>Новий формат традицій</h2>
         <p>
-          <span class="accent">shop bakery</span>— це пекарня, яка взяла все
-          найкраще, і зберегла смак традиційної випічки та натуральність
-          інгредієнтів.
+          <span class="accent first-accent">shop bakery</span>— це пекарня, яка
+          взяла все найкраще, і зберегла смак традиційної випічки та
+          натуральність інгредієнтів.
         </p>
         <p>
           Ми працюємо як найвідоміші мережі—
-          <span class="accent">5 хвилин і замовлення готове.</span> А ще у наших
-          пекарень стильний дизайн та висока якість обслуговування!
+          <span class="accent">5 хвилин і замовлення готове.</span>
+          А ще у наших пекарень стильний дизайн та висока якість обслуговування!
         </p>
         <img
           src="./images/man-bread.svg"
@@ -54,7 +54,7 @@
         <ul>
           <li>
             <article>
-              <h3>Настя</h3>
+              <h3 class="chef">Настя</h3>
               <p>Привіт, я Настя!</p>
               <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
               <p>Я випічу для вас найсмачніщі вироби!</p>
@@ -62,7 +62,7 @@
           </li>
           <li>
             <article>
-              <h3>Влад</h3>
+              <h3 class="chef">Влад</h3>
               <p>Привіт, я Влад!</p>
               <p>
                 Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов,
@@ -77,22 +77,46 @@
         <h2>Формати</h2>
         <ul>
           <li>
-            <article class="format-article" lang="en"><h3>Walrus</h3></article>
-          </li>
-          <li>
             <article class="format-article" lang="en">
-              <h3>Horseshoe</h3>
+              <h3 class="format">Walrus</h3>
+              <div class="format-description">
+                <p>Площа: до 120 м2</p>
+                <p>Меню: розширене меню</p>
+                <p>
+                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                  офіціанти-різнороби
+                </p>
+                <p>Посадкові місця: є</p>
+              </div>
             </article>
           </li>
           <li>
             <article class="format-article" lang="en">
-              <h3>Handlebar</h3>
+              <h3 class="format">Horseshoe</h3>
+              <div class="format-description">
+                <p>Площа: до 25 м2</p>
+                <p>Меню: найпопулярніші позиції меню</p>
+                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                <p>Посадкові місця: відсутні</p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="format-article" lang="en">
+              <h3 class="format">Handlebar</h3>
+              <div class="format-description">
+                <p>Площа: до 15 м2</p>
+                <p>Меню: найпопулярніші позиції меню</p>
+                <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                <p>Посадкові місця: відсутні</p>
+              </div>
             </article>
           </li>
         </ul>
       </section>
       <section id="contacts-section">
         <h2>Приєднуйся до мережі пекарень</h2>
+        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
       </section>
     </main>
     <footer>
@@ -108,27 +132,30 @@
       <address>
         <ul>
           <li>
-            <a class="main-nav" href="tel:+380960000007"
+            <a class="main-nav address-link" href="tel:+380960000007"
               >+ 38 (096) 000 00 07</a
             >
           </li>
           <li>
-            <a class="main-nav" href="mailto:shopbakery@gmail.com"
+            <a class="main-nav address-link" href="mailto:shopbakery@gmail.com"
               >shopbakery@gmail.com</a
             >
           </li>
           <li>
             <a
-              class="main-nav"
+              class="main-nav address-link"
               href="https://maps.app.goo.gl/1LngnVrV8qcp1udo8"
               target="_blank"
               >Україна, м. Київ, вул. Січових Стрільців 54</a
             >
           </li>
-          <li><a class="main-nav" href="#"></a></li>
-          <li><a class="main-nav" href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
         </ul>
-        <a href="#">© 2022 Дані захищені</a>
+        <a href="#" target="_blank" class="main-nav address-link"
+          >Політика конфіденційності</a
+        >
+        <p class="copyright">&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
