--- a/index.html
+++ b/index.html
@@ -8,155 +8,181 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">
-          <img src="./images/logo.svg" alt="Лого cучасна пекарня" />
-        </a>
-        <ul>
-          <li>
-            <a class="main-nav" href="#tradition-section">Наші традиції</a>
-          </li>
-          <li><a class="main-nav" href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a class="main-nav" href="#formats-section">Формати</a></li>
-          <li><a class="main-nav" href="#contacts-section">Контакти</a></li>
-        </ul>
-      </nav>
-      <button type="button" class="main-button">Замовити дзвінок</button>
+      <div class="container">
+        <nav>
+          <a href="./index.html">
+            <img src="./images/logo.svg" alt="Лого cучасна пекарня" />
+          </a>
+          <ul>
+            <li>
+              <a class="main-nav" href="#tradition-section">Наші традиції</a>
+            </li>
+            <li><a class="main-nav" href="#chefs-section">Шеф-кухарі</a></li>
+            <li><a class="main-nav" href="#formats-section">Формати</a></li>
+            <li><a class="main-nav" href="#contacts-section">Контакти</a></li>
+          </ul>
+        </nav>
+        <button type="button" class="main-button">Замовити дзвінок</button>
+      </div>
     </header>
     <main>
-      <section class="hero-section">
-        <h1><span class="accent">Сучасна</span> пекарня</h1>
-        <ul class="advantages-list">
-          <li>Великий попит на ринку</li>
-          <li>Доступні за бюджетом формати</li>
-          <li>Досвідчена управлінська команда</li>
-        </ul>
+      <section class="section hero-section">
+        <div class="container">
+          <h1 class="hero-title">
+            <span class="accent">Сучасна</span> пекарня
+          </h1>
+        </div>
       </section>
-      <section class="tradition-section" id="tradition-section">
-        <h2>Новий формат традицій</h2>
-        <p>
-          <span class="accent first-accent">shop bakery</span>— це пекарня, яка
-          взяла все найкраще, і зберегла смак традиційної випічки та
-          натуральність інгредієнтів.
-        </p>
-        <p>
-          Ми працюємо як найвідоміші мережі—
-          <span class="accent">5 хвилин і замовлення готове.</span>
-          А ще у наших пекарень стильний дизайн та висока якість обслуговування!
-        </p>
-        <img
-          src="./images/man-bread.svg"
-          alt="Чоловік дивиться на хліб з посмішкою"
-        />
+      <section>
+        <div class="div">
+          <h2 class="visualy-hidden">Наші переваги</h2>
+          <ul class="advantages-list">
+            <li>Великий попит на ринку</li>
+            <li>Доступні за бюджетом формати</li>
+            <li>Досвідчена управлінська команда</li>
+          </ul>
+        </div>
       </section>
-      <section class="chefs-section" id="chefs-section">
-        <h2>Наші найкращі <span class="accent">шеф-кухарі</span></h2>
-        <ul>
-          <li>
-            <article>
-              <h3 class="chef">Настя</h3>
-              <p>Привіт, я Настя!</p>
-              <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
-              <p>Я випічу для вас найсмачніщі вироби!</p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="chef">Влад</h3>
-              <p>Привіт, я Влад!</p>
-              <p>
-                Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов,
-                з якою ми ділимось кожен раз з Вами через нашу випічку!
-              </p>
-              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-            </article>
-          </li>
-        </ul>
+      <section class="section tradition-section" id="tradition-section">
+        <div class="container">
+          <h2 class="tradition-title">Новий формат традицій</h2>
+          <p class="tradition-text">
+            <span class="accent first-accent">shop bakery</span>— це пекарня,
+            яка взяла все найкраще, і зберегла смак традиційної випічки та
+            натуральність інгредієнтів.
+          </p>
+          <p>
+            Ми працюємо як найвідоміші мережі—
+            <span class="accent">5 хвилин і замовлення готове.</span>
+            А ще у наших пекарень стильний дизайн та висока якість
+            обслуговування!
+          </p>
+          <img
+            src="./images/man-bread.svg"
+            alt="Чоловік дивиться на хліб з посмішкою"
+          />
+        </div>
       </section>
-      <section id="formats-section">
-        <h2>Формати</h2>
-        <ul>
-          <li>
-            <article class="format-article" lang="en">
-              <h3 class="format">Walrus</h3>
-              <div class="format-description">
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
+      <section class="section chefs-section" id="chefs-section">
+        <div class="container">
+          <h2 class="chef-title">
+            Наші найкращі <span class="accent">шеф-кухарі</span>
+          </h2>
+          <ul>
+            <li>
+              <article>
+                <h3 class="chef">Настя</h3>
+                <p>Привіт, я Настя!</p>
+                <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+                <p>Я випічу для вас найсмачніщі вироби!</p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="chef">Влад</h3>
+                <p>Привіт, я Влад!</p>
                 <p>
-                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                  офіціанти-різнороби
+                  Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша
+                  любов, з якою ми ділимось кожен раз з Вами через нашу випічку!
                 </p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article class="format-article" lang="en">
-              <h3 class="format">Horseshoe</h3>
-              <div class="format-description">
-                <p>Площа: до 25 м2</p>
-                <p>Меню: найпопулярніші позиції меню</p>
-                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                <p>Посадкові місця: відсутні</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article class="format-article" lang="en">
-              <h3 class="format">Handlebar</h3>
-              <div class="format-description">
-                <p>Площа: до 15 м2</p>
-                <p>Меню: найпопулярніші позиції меню</p>
-                <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                <p>Посадкові місця: відсутні</p>
-              </div>
-            </article>
-          </li>
-        </ul>
+                <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section id="contacts-section">
-        <h2>Приєднуйся до мережі пекарень</h2>
-        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+      <section id="section formats-section">
+        <div class="container">
+          <h2 class="format-title">Формати</h2>
+          <ul>
+            <li>
+              <article class="format-article" lang="en">
+                <h3 class="format">Walrus</h3>
+                <div class="format-description">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти-різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article class="format-article" lang="en">
+                <h3 class="format">Horseshoe</h3>
+                <div class="format-description">
+                  <p>Площа: до 25 м2</p>
+                  <p>Меню: найпопулярніші позиції меню</p>
+                  <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                  <p>Посадкові місця: відсутні</p>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article class="format-article" lang="en">
+                <h3 class="format">Handlebar</h3>
+                <div class="format-description">
+                  <p>Площа: до 15 м2</p>
+                  <p>Меню: найпопулярніші позиції меню</p>
+                  <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                  <p>Посадкові місця: відсутні</p>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="section contacts-section">
+        <div class="container">
+          <h2 class="contact-title">Приєднуйся до мережі пекарень</h2>
+          <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+        </div>
       </section>
     </main>
     <footer>
-      <nav>
-        <a href=""></a>
-        <ul>
-          <li><a class="main-nav" href="#">Франшиза</a></li>
-          <li><a class="main-nav" href="#">Наші традиції</a></li>
-          <li><a class="main-nav" href="#">Формати</a></li>
-          <li><a class="main-nav" href="#">Контакти</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="main-nav address-link" href="tel:+380960000007"
-              >+ 38 (096) 000 00 07</a
-            >
-          </li>
-          <li>
-            <a class="main-nav address-link" href="mailto:shopbakery@gmail.com"
-              >shopbakery@gmail.com</a
-            >
-          </li>
-          <li>
-            <a
-              class="main-nav address-link"
-              href="https://maps.app.goo.gl/1LngnVrV8qcp1udo8"
-              target="_blank"
-              >Україна, м. Київ, вул. Січових Стрільців 54</a
-            >
-          </li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-        </ul>
-        <a href="#" target="_blank" class="main-nav address-link"
-          >Політика конфіденційності</a
-        >
-        <p class="copyright">&copy; 2022 Дані захищені</p>
-      </address>
+      <div class="container">
+        <nav>
+          <a href=""></a>
+          <ul>
+            <li><a class="main-nav" href="#">Франшиза</a></li>
+            <li><a class="main-nav" href="#">Наші традиції</a></li>
+            <li><a class="main-nav" href="#">Формати</a></li>
+            <li><a class="main-nav" href="#">Контакти</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul>
+            <li>
+              <a class="main-nav address-link" href="tel:+380960000007"
+                >+ 38 (096) 000 00 07</a
+              >
+            </li>
+            <li>
+              <a
+                class="main-nav address-link"
+                href="mailto:shopbakery@gmail.com"
+                >shopbakery@gmail.com</a
+              >
+            </li>
+            <li>
+              <a
+                class="main-nav address-link"
+                href="https://maps.app.goo.gl/1LngnVrV8qcp1udo8"
+                target="_blank"
+                >Україна, м. Київ, вул. Січових Стрільців 54</a
+              >
+            </li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+          </ul>
+          <a href="#" target="_blank" class="main-nav address-link"
+            >Політика конфіденційності</a
+          >
+          <p class="copyright">&copy; 2022 Дані захищені</p>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
