--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
   <body>
     <header>
       <div class="container">
-        <nav>
-          <a href="./index.html">
-            <img src="./images/logo.svg" alt="Лого cучасна пекарня" />
-          </a>
-          <ul>
-            <li>
-              <a class="main-nav" href="#tradition-section">Наші традиції</a>
-            </li>
-            <li><a class="main-nav" href="#chefs-section">Шеф-кухарі</a></li>
-            <li><a class="main-nav" href="#formats-section">Формати</a></li>
-            <li><a class="main-nav" href="#contacts-section">Контакти</a></li>
-          </ul>
-        </nav>
-        <button type="button" class="main-button">Замовити дзвінок</button>
+        <div class="header-container">
+          <nav class="header-nav">
+            <a href="./index.html">
+              <img src="./images/logo.svg" alt="Лого cучасна пекарня" />
+            </a>
+            <ul class="main-list">
+              <li>
+                <a class="main-nav" href="#tradition-section">Наші традиції</a>
+              </li>
+              <li><a class="main-nav" href="#chefs-section">Шеф-кухарі</a></li>
+              <li><a class="main-nav" href="#formats-section">Формати</a></li>
+              <li><a class="main-nav" href="#contacts-section">Контакти</a></li>
+            </ul>
+          </nav>
+          <button type="button" class="main-button">Замовити дзвінок</button>
+        </div>
       </div>
     </header>
     <main>
@@ -33,8 +35,8 @@
           </h1>
         </div>
       </section>
-      <section>
-        <div class="div">
+      <section class="advantages-section">
+        <div class="container">
           <h2 class="visualy-hidden">Наші переваги</h2>
           <ul class="advantages-list">
             <li>Великий попит на ринку</li>
@@ -45,22 +47,26 @@
       </section>
       <section class="section tradition-section" id="tradition-section">
         <div class="container">
-          <h2 class="tradition-title">Новий формат традицій</h2>
-          <p class="tradition-text">
-            <span class="accent first-accent">shop bakery</span>— це пекарня,
-            яка взяла все найкраще, і зберегла смак традиційної випічки та
-            натуральність інгредієнтів.
-          </p>
-          <p>
-            Ми працюємо як найвідоміші мережі—
-            <span class="accent">5 хвилин і замовлення готове.</span>
-            А ще у наших пекарень стильний дизайн та висока якість
-            обслуговування!
-          </p>
-          <img
-            src="./images/man-bread.svg"
-            alt="Чоловік дивиться на хліб з посмішкою"
-          />
+          <div class="tradition-container">
+            <div class="text-container">
+              <h2 class="tradition-title">Новий формат традицій</h2>
+              <p class="tradition-text">
+                <span class="accent first-accent">shop bakery</span>— це
+                пекарня, яка взяла все найкраще, і зберегла смак традиційної
+                випічки та натуральність інгредієнтів.
+              </p>
+              <p class="tradition-text">
+                Ми працюємо як найвідоміші мережі—
+                <span class="accent">5 хвилин і замовлення готове.</span>
+                А ще у наших пекарень стильний дизайн та висока якість
+                обслуговування!
+              </p>
+            </div>
+            <img
+              src="./images/man-bread.svg"
+              alt="Чоловік дивиться на хліб з посмішкою"
+            />
+          </div>
         </div>
       </section>
       <section class="section chefs-section" id="chefs-section">
@@ -94,8 +100,8 @@
       <section id="section formats-section">
         <div class="container">
           <h2 class="format-title">Формати</h2>
-          <ul>
-            <li>
+          <ul class="format-cards">
+            <li class="card">
               <article class="format-article" lang="en">
                 <h3 class="format">Walrus</h3>
                 <div class="format-description">
@@ -109,7 +115,7 @@
                 </div>
               </article>
             </li>
-            <li>
+            <li class="card">
               <article class="format-article" lang="en">
                 <h3 class="format">Horseshoe</h3>
                 <div class="format-description">
@@ -120,7 +126,7 @@
                 </div>
               </article>
             </li>
-            <li>
+            <li class="card">
               <article class="format-article" lang="en">
                 <h3 class="format">Handlebar</h3>
                 <div class="format-description">
@@ -141,47 +147,55 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
-        <nav>
-          <a href=""></a>
-          <ul>
-            <li><a class="main-nav" href="#">Франшиза</a></li>
-            <li><a class="main-nav" href="#">Наші традиції</a></li>
-            <li><a class="main-nav" href="#">Формати</a></li>
-            <li><a class="main-nav" href="#">Контакти</a></li>
-          </ul>
-        </nav>
-        <address>
-          <ul>
-            <li>
-              <a class="main-nav address-link" href="tel:+380960000007"
-                >+ 38 (096) 000 00 07</a
-              >
-            </li>
-            <li>
-              <a
-                class="main-nav address-link"
-                href="mailto:shopbakery@gmail.com"
-                >shopbakery@gmail.com</a
-              >
-            </li>
-            <li>
-              <a
-                class="main-nav address-link"
-                href="https://maps.app.goo.gl/1LngnVrV8qcp1udo8"
-                target="_blank"
-                >Україна, м. Київ, вул. Січових Стрільців 54</a
-              >
-            </li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-          </ul>
-          <a href="#" target="_blank" class="main-nav address-link"
-            >Політика конфіденційності</a
-          >
-          <p class="copyright">&copy; 2022 Дані захищені</p>
-        </address>
+        <div class="footer-container">
+          <nav class="footer-nav">
+            <div class="logo">
+              <a href="./index.html">
+                <img src="./images/logo.svg" alt="Лого cучасна пекарня" />
+              </a>
+            </div>
+            <ul class="footer-list">
+              <li><a class="main-nav" href="#">Франшиза</a></li>
+              <li><a class="main-nav" href="#">Наші традиції</a></li>
+              <li><a class="main-nav" href="#">Формати</a></li>
+              <li><a class="main-nav" href="#">Контакти</a></li>
+            </ul>
+          </nav>
+          <address class="footer-address">
+            <ul class="contacts">
+              <li>
+                <a class="main-nav address-link" href="tel:+380960000007"
+                  >+ 38 (096) 000 00 07</a
+                >
+              </li>
+              <li>
+                <a
+                  class="main-nav address-link"
+                  href="mailto:shopbakery@gmail.com"
+                  >shopbakery@gmail.com</a
+                >
+              </li>
+              <li>
+                <a
+                  class="main-nav address-link"
+                  href="https://maps.app.goo.gl/1LngnVrV8qcp1udo8"
+                  target="_blank"
+                  >Україна, м. Київ, вул. Січових Стрільців 54</a
+                >
+              </li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </address>
+          <div class="last-items">
+            <a href="#" target="_blank" class="main-nav address-link"
+              >Політика конфіденційності</a
+            >
+            <p class="copyright">&copy; 2022 Дані захищені</p>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
