--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               </p>
             </div>
             <img
+              class="man-bread"
               src="./images/man-bread.svg"
               alt="Чоловік дивиться на хліб з посмішкою"
             />
@@ -74,24 +75,39 @@
           <h2 class="chef-title">
             Наші найкращі <span class="accent">шеф-кухарі</span>
           </h2>
-          <ul>
+          <ul class="chef-list">
             <li>
-              <article>
-                <h3 class="chef">Настя</h3>
-                <p>Привіт, я Настя!</p>
-                <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
-                <p>Я випічу для вас найсмачніщі вироби!</p>
+              <article class="chef-article">
+                <img
+                  class="chef-photo"
+                  src="./images/nastya-chef.png"
+                  alt="Nastya chef"
+                />
+                <div class="chef-description">
+                  <h3 class="chef">Настя</h3>
+                  <p>Привіт, я Настя!</p>
+                  <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+                  <p>Я випічу для вас найсмачніщі вироби!</p>
+                </div>
               </article>
             </li>
             <li>
-              <article>
-                <h3 class="chef">Влад</h3>
-                <p>Привіт, я Влад!</p>
-                <p>
-                  Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша
-                  любов, з якою ми ділимось кожен раз з Вами через нашу випічку!
-                </p>
-                <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+              <article class="chef-article">
+                <img
+                  class="chef-photo"
+                  src="./images/vlad-chef.png"
+                  alt="Vlad chef"
+                />
+                <div class="chef-description">
+                  <h3 class="chef">Влад</h3>
+                  <p>Привіт, я Влад!</p>
+                  <p>
+                    Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша
+                    любов, з якою ми ділимось кожен раз з Вами через нашу
+                    випічку!
+                  </p>
+                  <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+                </div>
               </article>
             </li>
           </ul>
