--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
@@ -116,6 +116,11 @@
       <section id="section formats-section">
         <div class="container">
           <h2 class="format-title">Формати</h2>
+          <button type="button" class="carousel-button">
+            <svg width="16" height="16">
+              <use href="./images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
           <ul class="format-cards">
             <li class="card">
               <article class="format-article" lang="en">
@@ -154,6 +159,11 @@
               </article>
             </li>
           </ul>
+          <button type="button" class="carousel-button">
+            <svg width="16" height="16">
+              <use href="./images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
         </div>
       </section>
       <section id="section contacts-section">
@@ -173,27 +183,35 @@
               </a>
             </div>
             <ul class="footer-list">
-              <li><a class="main-nav" href="#">Франшиза</a></li>
-              <li><a class="main-nav" href="#">Наші традиції</a></li>
-              <li><a class="main-nav" href="#">Формати</a></li>
-              <li><a class="main-nav" href="#">Контакти</a></li>
+              <li class="footer-item">
+                <a class="main-nav" href="#">Франшиза</a>
+              </li>
+              <li class="footer-item">
+                <a class="main-nav" href="#">Наші традиції</a>
+              </li>
+              <li class="footer-item">
+                <a class="main-nav" href="#">Формати</a>
+              </li>
+              <li class="footer-item">
+                <a class="main-nav" href="#">Контакти</a>
+              </li>
             </ul>
           </nav>
-          <address class="footer-address">
+          <address>
             <ul class="contacts">
-              <li>
+              <li class="footer-item">
                 <a class="main-nav address-link" href="tel:+380960000007"
                   >+ 38 (096) 000 00 07</a
                 >
               </li>
-              <li>
+              <li class="footer-item">
                 <a
                   class="main-nav address-link"
                   href="mailto:shopbakery@gmail.com"
                   >shopbakery@gmail.com</a
                 >
               </li>
-              <li>
+              <li class="footer-item">
                 <a
                   class="main-nav address-link"
                   href="https://maps.app.goo.gl/1LngnVrV8qcp1udo8"
@@ -201,8 +219,22 @@
                   >Україна, м. Київ, вул. Січових Стрільців 54</a
                 >
               </li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
+              <div class="icons">
+                <li class="footer-item">
+                  <a href="#">
+                    <svg width="32" height="32" class="address-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg width="32" height="32" class="address-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+              </div>
             </ul>
           </address>
           <div class="last-items">
